[package]
name = "doh-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["--cfg", "tracing_unstable"]


[dependencies]
log = "0.4.17"
zbus = { version = "5.9.0", features = ["tokio"] }
zvariant = "5.6.0"
zvariant_derive = "5.6.0"
tokio = { version = "1", features = ["full", "tracing"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
libnss = { path = "../libnss" }
doh-common = {path = "../doh-common"}
punycode = "0.4.1"
async-sqlite="0.5.3"
reqwest = { version =  "0.12.23", features = ["gzip","json", "brotli"] }
configparser = "3.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }