[package]
name = "doh"
version = "0.1.0"
authors = ["NunuM <1140358@isep.ipp.pt>"]
edition = "2018"
homepage = "https://github.com/NunuM/dns-over-https-nss-linux"

[lib]
name = "nss_doh"
crate-type = [ "cdylib" ]

[dependencies]
libc = "0.2.71"
lazy_static = "1.4.0"
paste = "0.1.18"
libnss = { path = "../libnss" }
serde_json = "1.0.57"
openssl = { version = "0.10", features = ["vendored"] }
syslog = "5.0.0"
