[package]
name = "doh"
version = "0.1.0"
authors = ["NunuM <1140358@isep.ipp.pt>"]
edition = "2018"
homepage = "https://github.com/NunuM/dns-over-https-nss-linux"

[lib]
name = "nss_doh"
crate-type = [ "cdylib" ]

[dependencies]
libc = "0.2.71"
lazy_static = "1.4.0"
paste = "0.1.18"
libnss = { path = "../libnss" }
blocking = "1.6.2"

zbus = "5.9.0"
zvariant = "5.6.0"
zvariant_derive = "5.6.0"

[package.metadata.deb]
maintainer = "Nuno Goncalves <1140358@isep.ipp.pt>"
copyright = "2024, Nuno Goncalves <1140358@isep.ipp.pt>"
license-file = ["LICENSE", "2"]
changelog = "changelog"
extended-description = """\
DoH is a dynamic library for Unix-like operating systems that enhances the Name Service Switch (NSS) \
functionality for hostname resolution by integrating DNS-over-HTTPS (DoH) capabilities.\
This library is designed to provide a seamless and secure method for resolving hostnames to IP addresses \
by leveraging the encryption and privacy features offered by DoH."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libnss_doh.so", "lib/libnss_doh.so.2", "644"],
    ["../README.md", "usr/share/doc/doh/README.md", "644"],
]